restructured models, services and controllers

--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -44,6 +44,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version> <!-- latest stable as of 2025 -->
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
