Google outh and JWT intigration completed

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=quiz-backend
+server.port=8080
+
 # MongoDB connection
 spring.data.mongodb.uri=mongodb://localhost:27017/quizgeek
 spring.data.mongodb.database=quizgeek
+
+# Security configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
